[package]
name = "engine"
version = "1.0.0"
edition = "2021"
authors = ["Ludovic Debever ludovicdebever0@gmail.com", 'Eliott Reigner', 'Mahdi Aribi']
description = "Pluto Chess Engine"
repository = "https://github.com/Lxdovic/pluto"

[lib]
crate-type = ["cdylib"]
name = "engine"
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[features]
default = []
tuning = []

[dependencies]
queues = "1.1.0"
shakmaty = "0.27.2"
serde_derive = "1.0.215"
toml = "0.8.19"
serde = "1.0.215"
wasm-bindgen = "0.2.100"
chrono = "0.4.40"
web-sys = { version = "0.3.77", features = [
    'Worker',
] }
